Deploying the CEED website with mkdocs, version 1.0.4 from /home/valeria/.local/lib/python3.6/site-packages/mkdocs (Python 3.6)

--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -366,7 +366,7 @@ Based on your feedback during registration we can incorporate the following elem
 <p>The meeting activities will take place 10:30am-6:00pm eastern time (7:30am-3:00pm pacific).</p>
 <p>Live presentations, tutorials, breaks and wrap-up will be on <a href="https://exascaleproject.zoomgov.com/">ECP Zoom</a> (links to be posted the week of the meeting).
 Side discussions and breakout sessions will be on the meeting <a href="https://ceed4am.slack.com/">Slack</a> space.</p>
-<p>Moderators will be unmuted to provide some auditory feedback. They will also monitor chat, relay questions and lead the applause!</p>
+<p>Moderators will be unmuted to provide some auditory feedback and relay questions</p>
 <h4 id="monday-august-10">Monday, August 10</h4>
 <table>
 <thead>
