--- a/pubs/index.html
+++ b/pubs/index.html
@@ -385,9 +385,14 @@
 </ul>
 <p><a href="https://doi.org/10.5281/zenodo.3860804"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3860804.svg" class="doi"></a></p>
 <ul>
-<li>CEED-MS34 report: <a href="docs/ceed-ms34-report.pdf">Improve performance and capabilities of CEED-enabled ECP applications on Summit/Sierra</a>.</li>
+<li>CEED-MS34 report: <a href="../docs/ceed-ms34-report.pdf">Improve performance and capabilities of CEED-enabled ECP applications on Summit/Sierra</a>.</li>
 </ul>
 <h3 id="publications">Publications</h3>
+<h4 id="2020">2020</h4>
+<ol>
+<li>V. Barra, J. Brown, J. Thompson, Y. Dudouit, <a href="https://doi.org/10.25080/Majora-342d178e-00c">High-performance operator evaluations with ease of use: libCEED's Python interface</a>, <em>Proc. 19th Python in Science Conf.</em>, 85-90, <strong>2020</strong></li>
+</ol>
+<hr />
 <h4 id="2019">2019</h4>
 <ol>
 <li>P. Fischer, M. Min, T. Rathanayake, S. Dutta, Tz. Kolev, V. Dobrev, J.S. Camier, M. Kronbichler, T. Warburton, K. Swirydowicz, and J. Brown, <a href="">Scalability of High-Performance PDE Solvers</a>, <em>Int. J. High Perf. Comput. Appl.</em>, <strong>2020</strong>.</li>
