Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/2.7/lib/python/site-packages/mkdocs (Python 2.7)

--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -366,7 +366,7 @@ Based on your feedback during registration we can incorporate the following elem
 <p>The meeting activities will take place 10:30am-6:00pm eastern time (7:30am-3:00pm pacific).</p>
 <p>Live presentations, tutorials, breaks and wrap-up will be on <a href="https://exascaleproject.zoomgov.com/">ECP Zoom</a> (links to be posted the week of the meeting).
 Side discussions and breakout sessions will be on the meeting <a href="https://ceed4am.slack.com/">Slack</a> space.</p>
-<p>Moderators will be unmuted to provide some auditory feedback and relay questions</p>
+<p>Moderators will be unmuted to provide some auditory feedback. They will also monitor chat, relay questions and lead the applause!</p>
 <h4 id="monday-august-10">Monday, August 10</h4>
 <table>
 <thead>
@@ -472,7 +472,7 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <tr>
 <td>12:30-2:30</td>
 <td>3:30-5:30</td>
-<td><strong>Recorded Talks + Posters</strong> <br>1. <em>Progress in RF wave simulation for fusion plasmas using MFEM</em> - Syun'ichi Shiraiwa (PPPL) <br>2. <em>Coupling MFEM with the Ginkgo backend for efficient numerics on GPUs</em> - Natalie Beams (UTK) <br>3. <em>Recent Developments in the Omega_h Unstructured Mesh Adaptation Library</em> - Cameron Smith (RPI) <br>4. <em>Inline Vector Compression for Computational Physics</em> - Freddie Witherden (TAMU) <br>5. <em>Spectral mesh-free quadrature for regions with rational parametric boundaries</em> - David Gunderman (LLNL)</td>
+<td><strong>Recorded Talks + Posters</strong> <br>1. <em>Progress in RF wave simulation for fusion plasmas using MFEM</em> - Syun'ichi Shiraiwa (PPPL) <br>2. <em>Coupling MFEM with the Ginkgo backend for efficient numerics on GPUs</em> - Natalie Beams (UTK) <!-- <br>3. *Recent Developments in the Omega_h Unstructured Mesh Adaptation Library* - Cameron Smith (RPI) --> <br>3. <em>Inline Vector Compression for Computational Physics</em> - Freddie Witherden (TAMU) <br>4. <em>Spectral mesh-free quadrature for regions with rational parametric boundaries</em> - David Gunderman (LLNL)</td>
 <td><em>Tim Warburton</em></td>
 </tr>
 <tr>
