--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -547,7 +547,7 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>10:20-10:40</td>
 <td>1:20-1:40</td>
-<td><strong>Achieving Performance Portability in Blast with LLNL Tools: Profiling, Kernel Abstractions, Memory Pools, and More</strong> <br> Tom Stitt (LLNL)</td>
+<td><strong>Achieving Performance Portability in MARBL with LLNL Tools: Profiling, Kernel Abstractions, Memory Pools, and More</strong> <br> Tom Stitt (LLNL)</td>
 <td><em>Tzanio Kolev</em></td>
 </tr>
 <tr>
