add cameron to adapt talk

--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -16,7 +16,9 @@
         <link rel="stylesheet" href="../css/highlight.css">
         <link href="../css/base.css" rel="stylesheet">
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- HTML5 shim 
+
+Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -517,7 +519,7 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>8:00-8:30</td>
 <td>11:00-11:30</td>
-<td><strong>Curved conforming mesh adaptation</strong> <br> Mark Shephard (RPI)</td>
+<td><strong>Curved conforming mesh adaptation</strong> <br> Mark Shephard (RPI) and Cameron Smith (RPI)</td>
 <td><em>Paul Fischer</em></td>
 </tr>
 <tr>
