--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="../css/highlight.css">
         <link href="../css/base.css" rel="stylesheet">
 
-        <!-- HTML5 shim Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -446,7 +446,7 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>10:20-10:40</td>
 <td>1:20-1:40</td>
-<td><strong>ExaSMR Update</strong> <br> Elia Merzari (PSU)</td>
+<td><strong>Toward full core CFD: update from ExaSMR</strong> <br> Elia Merzari (PSU)</td>
 <td><em>Misun Min</em></td>
 </tr>
 <tr>
@@ -476,13 +476,19 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>12:00-12:30</td>
 <td>3:00-3:30</td>
-<td><strong>Break</strong> <br> • side discussions on Slack</td>
+<td><strong>Group Photo &amp; Break</strong> <br> • side discussions on Slack</td>
 <td></td>
 </tr>
 <tr>
-<td>12:30-2:30</td>
-<td>3:30-5:30</td>
-<td><strong>Technical Discussions</strong> <br> • new BPs, solvers, meshing, visualization <br> • additional topics proposed at the meeting</td>
+<td>12:30-1:00</td>
+<td>3:30-4:00</td>
+<td><strong>Breakout Sessions Topics</strong> <br> • discuss/finalize topics for parallel technical discussions <br> • e.g. new BPs, solvers, meshing, visualization, ...</td>
+<td><em>Tzanio Kolev</em></td>
+</tr>
+<tr>
+<td>1:00-2:30</td>
+<td>4:00-5:30</td>
+<td><strong>Technical Discussions</strong> <br> • parallel sessions on Slack</td>
 <td></td>
 </tr>
 <tr>
@@ -517,7 +523,7 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>8:00-8:30</td>
 <td>11:00-11:30</td>
-<td><strong>Curved conforming mesh adaptation</strong> <br> Mark Shephard (RPI) and Cameron Smith (RPI)</td>
+<td><strong>Curved conforming mesh adaptation</strong> <br> Mark Shephard and Cameron Smith (RPI)</td>
 <td><em>Paul Fischer</em></td>
 </tr>
 <tr>
@@ -541,7 +547,7 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>10:00-10:20</td>
 <td>1:00-1:20</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanmire Tomov (UTK)</td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov (UTK)</td>
 <td><em>Tzanio Kolev</em></td>
 </tr>
 <tr>
@@ -581,9 +587,15 @@ Based on your feedback during registration we can incorporate the following elem
 <td></td>
 </tr>
 <tr>
-<td>12:30-2:30</td>
-<td>3:30-5:30</td>
-<td><strong>Technical Discussions</strong> <br> • new BPs, solvers, meshing, visualization, ... <br> • libCEED tutorial (Valeria Barra, CU Boulder) <br> • additional topics proposed at the meeting</td>
+<td>12:30-1:00</td>
+<td>3:30-4:00</td>
+<td><strong>libCEED tutorial</strong> <br> Valeria Barra (CU Boulder)</td>
+<td><em>Tzanio Kolev</em></td>
+</tr>
+<tr>
+<td>1:00-2:30</td>
+<td>4:00-5:30</td>
+<td><strong>Technical Discussions</strong> <br> • parallel sessions on Slack</td>
 <td></td>
 </tr>
 <tr>
