Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/2.7/lib/python/site-packages/mkdocs (Python 2.7)

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -387,10 +387,14 @@
 <ul>
 <li>CEED-MS34 report: <a href="../docs/ceed-ms34-report.pdf">Improve performance and capabilities of CEED-enabled ECP applications on Summit/Sierra</a>.</li>
 </ul>
+<p><a href="https://doi.org/xxx/zenodo.xxx"><img src="https://zenodo.org/badge/DOI/xxx/zenodo.xxx.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS35 report: <a href="../docs/ceed-ms35-report.pdf">Support CEED-enabled ECP applications in their preparation for Aurora/Frontier</a>.</li>
+</ul>
 <h3 id="publications">Publications</h3>
 <h4 id="2020">2020</h4>
 <ol>
-<li>A. Abdelfattah, S. Tomov, J. Dongarra, <a href="https://doi.org/10.1016/j.jpdc.2020.07.001">Matrix multiplication on batches of small matrices in half and half-complex precisions</a>, <em>Journal of Parallel and Distributed Computing</em>, vol. 145, pp. 188-201, <strong>2020</strong>. </li>
+<li>A. Abdelfattah, S. Tomov, J. Dongarra, <a href="https://doi.org/10.1016/j.jpdc.2020.07.001">Matrix multiplication on batches of small matrices in half and half-complex precisions</a>, <em>Journal of Parallel and Distributed Computing</em>, vol. 145, pp. 188-201, <strong>2020</strong>.</li>
 <li>K. Mittal, S. Dutta, and P. Fischer, <a href="https://arxiv.org/pdf/2003.00347.pdf">Multirate Timestepping for the Incompressible Navier-Stokes Equations in Overlapping Grids</a>, <em>in review</em>, <strong>2020</strong>.</li>
 <li>R. Anderson, J. Andrej, A. Barker, J. Bramwell, J.-S. Camier, J. Cerveny V. Dobrev, Y. Dudouit, A. Fisher, Tz. Kolev, W. Pazner, M. Stowell, V. Tomov, I. Akkerman, J. Dahm, D. Medina, and S. Zampini, <a href="http://doi.org/10.1016/j.camwa.2020.06.009">MFEM: A Modular Finite Element Library</a>, <em>Computers &amp; Mathematics with Applications</em>, <em>in press</em>, <strong>2020</strong>. Also available as <a href="http://arxiv.org/abs/1911.09220">arXiv:1911.09220</a>.</li>
 <li>C. Brown, A. Abdelfattah, S. Tomov, J. Dongarra, <a href="https://www.icl.utk.edu/files/publications/2020/icl-utk-1405-2020.pdf">Design, Optimization, and Benchmarking of Dense Linear Algebra Algorithms on AMD GPUs</a>, Innovative Computing Laboratory Technical Report, no. ICL-UT-20-12 (<em>to appear in HPEC'20</em>), August, <strong>2020</strong>.</li>
