Deploying the CEED website with mkdocs, version 1.1.2 from /usr/lib/python3.8/site-packages/mkdocs (Python 3.8)

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -387,7 +387,7 @@
 <ul>
 <li>CEED-MS34 report: <a href="../docs/ceed-ms34-report.pdf">Improve performance and capabilities of CEED-enabled ECP applications on Summit/Sierra</a>.</li>
 </ul>
-<p><a href="https://doi.org/xxx/zenodo.xxx"><img src="https://zenodo.org/badge/DOI/xxx/zenodo.xxx.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.4146401"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4146401.svg" class="doi"></a></p>
 <ul>
 <li>CEED-MS35 report: <a href="../docs/ceed-ms35-report.pdf">Support CEED-enabled ECP applications in their preparation for Aurora/Frontier</a>.</li>
 </ul>
