--- a/pubs/index.html
+++ b/pubs/index.html
@@ -339,55 +339,55 @@
 <p>CEED-proposed high-order <a href="../discr/#efficient-high-order-operator-format-wzxhzdk1">Operator</a> and <a href="../vis/">Visualization</a> formats.</p>
 </li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2542292"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542292.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2542292"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2542292-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS1 report: <a href="../docs/ceed-ms1-report.pdf">Engage first wave ECP/CEED apps</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2542333"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542333.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2542333"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2542333-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS6 report: <a href="../docs/ceed-ms6-report.pdf">Identify initial kernels, benchmarks and miniapps</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2542338"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542338.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2542338"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2542338-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS8 report: <a href="../docs/ceed-ms8-report.pdf">Initial integration of CEED software in ECP apps</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2542340"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542340.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2542340"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2542340-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS10 report: <a href="../docs/ceed-ms10-report.pdf">Initial CEED API</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2542343"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542343.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2542343"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2542343-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS13 report: <a href="../docs/ceed-ms13-report.pdf">Public release of CEED 1.0</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2542346"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542346.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2542346"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2542346-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS18 report: <a href="../docs/ceed-ms18-report.pdf">Propose high-order mesh/data format</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2542350"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542350.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2542350"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2542350-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS20 report: <a href="../docs/ceed-ms20-report.pdf">Performance tuning of CEED software and first wave apps</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2542359"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542359.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2542359"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2542359-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS23 report: <a href="../docs/ceed-ms23-report.pdf">Engage second wave ECP/CEED applications</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.2641316"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2641316.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.2641316"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.2641316-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS25 report: <a href="../docs/ceed-ms25-report.pdf">Public release of CEED 2.0</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.3336420"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3336420.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.3336420"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.3336420-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS29 report: <a href="../docs/ceed-ms29-report.pdf">Improved Support for Parallel Adaptive Simulation in CEED</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.3477618"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3477618.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.3477618"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.3477618-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS32 report: <a href="../docs/ceed-ms32-report.pdf">Performance tuning of CEED software and 1st and 2nd wave apps</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.3860804"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3860804.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.3860804"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.3860804-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS34 report: <a href="../docs/ceed-ms34-report.pdf">Improve performance and capabilities of CEED-enabled ECP applications on Summit/Sierra</a>.</li>
 </ul>
-<p><a href="https://doi.org/10.5281/zenodo.4146401"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4146401.svg" class="doi"></a></p>
+<p><a href="https://doi.org/10.5281/zenodo.4146401"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.4146401-blue" class="doi"></a></p>
 <ul>
 <li>CEED-MS35 report: <a href="../docs/ceed-ms35-report.pdf">Support CEED-enabled ECP applications in their preparation for Aurora/Frontier</a>.</li>
 </ul>
