--- a/libceed/index.html
+++ b/libceed/index.html
@@ -324,7 +324,8 @@ incorporate in a wide variety of applications, without significant refactoring
 of their own discretization infrastructure.</p>
 <p><em>This is an active area of research for our team and we are interested in
 feedback and collaboration.</em></p>
-<p>For more information, visit <a href="https://github.com/CEED/libCEED">https://github.com/CEED/libCEED</a> and the main <a href="https://libceed.readthedocs.io/">documentation website</a>.</p></div>
+<p>For more information, visit <a href="https://github.com/CEED/libCEED">https://github.com/CEED/libCEED</a> and the main <a href="https://libceed.readthedocs.io/">documentation website</a> and <a href="../docs/libCEED-user-manual.pdf">PDF</a>.</p>
+<p><a href="https://doi.org/10.5281/zenodo.4302736"><img src="https://img.shields.io/badge/DOI-10.5281%2Fzenodo.4302736-blue" style="display:inline;margin:0px"></a></p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
