--- a/pubs/index.html
+++ b/pubs/index.html
@@ -391,6 +391,10 @@
 <ul>
 <li>CEED-MS35 report: <a href="../docs/ceed-ms35-report.pdf">Support CEED-enabled ECP applications in their preparation for Aurora/Frontier</a>.</li>
 </ul>
+<p><a href="https://doi.org/10.5281/zenodo.4672664"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4672664.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS36 report: <a href="../docs/ceed-ms6-report.pdf">High-order algorithmic developments and optimizations for large-scale GPU-accelerated simulations</a>.</li>
+</ul>
 <h3 id="publications">Publications</h3>
 <h4 id="2020">2020</h4>
 <ol>
