Deploying the CEED website with mkdocs

--- a/404.html
+++ b/404.html
@@ -184,6 +184,10 @@
 <li>
     <a href="ceed4am/" class="dropdown-item">_CEED4AM</a>
 </li>
+                                    
+<li>
+    <a href="ceed5am/" class="dropdown-item">_CEED5AM</a>
+</li>
                                 </ul>
                             </li>
                             <li class="navitem">
