Deploying the CEED website with MkDocs

--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -364,7 +364,7 @@ management, hardware vendors, software technology and other interested projects.
 <li>Technical discussions in small breakout groups</li>
 </ul>
 <p>Live presentations and wrap-up will be on <a href="https://exascaleproject.zoomgov.com/">ECP Zoom</a> (links to be posted the week of the meeting).</p>
-<p>Side discussions and breakout sessions will be on the meeting <a href="https://ceedam.slack.com/">Slack</a> space.</p>
+<p>Side discussions and breakout sessions will be on the meeting <a href="https://ceedam.slack.com/">Slack</a> space -- <em>Please join in advance</em>.</p>
 <!--
 ### Meeting format
 
@@ -381,7 +381,6 @@ Based on your feedback during registration we can incorporate the following elem
 <h3 id="meeting-agenda">Meeting Agenda</h3>
 <p>The meeting activities will take place 10:30am-6:00pm eastern time (7:30am-3:00pm pacific).</p>
 <p>Moderators will be unmuted to provide some auditory feedback. They will also monitor chat, relay questions and lead in the applause!</p>
-<p><strong>Last year's agenda -- TO BE UPDATED</strong></p>
 <h4 id="monday-august-2">Monday, August 2</h4>
 <table>
 <thead>
