Deploying the CEED website with MkDocs

--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -380,7 +380,10 @@ Based on your feedback during registration we can incorporate the following elem
 
 <h3 id="meeting-agenda">Meeting Agenda</h3>
 <p>The meeting activities will take place 11am-5pm eastern time (8am-2pm pacific).</p>
-<p>Moderators will be unmuted to provide some auditory feedback. They will also monitor chat, relay questions and lead in the applause!</p>
+<!--
+Moderators will be unmuted to provide some auditory feedback. They will also monitor chat, relay questions and lead in the applause!
+-->
+
 <h4 id="monday-august-2">Monday, August 2</h4>
 <table>
 <thead>
@@ -476,7 +479,7 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>12:20-12:40</td>
 <td>3:20-3:40</td>
-<td><strong>Kernel Fussion on GPUs</strong> <br> Will Trojak (TAMU)</td>
+<td><strong>Kernel Fusion on GPUs</strong> <br> Will Trojak (TAMU)</td>
 </tr>
 <tr>
 <td>12:40-1:00</td>
@@ -508,7 +511,7 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>8:00-8:20</td>
 <td>11:00-11:20</td>
-<td><strong>Applications Thrust</strong> <br> Misun Min (ANL)</td>
+<td><strong>Applications Thrust &amp; Nek Update</strong> <br> Misun Min (ANL)</td>
 </tr>
 <tr>
 <td>8:20-8:40</td>
@@ -538,7 +541,7 @@ Based on your feedback during registration we can incorporate the following elem
 <tr>
 <td>10:00-10:20</td>
 <td>1:00-1:20</td>
-<td><strong>Accurate "Shaping" of Curved Interfaces into Curvilinear High Order Meshes</strong> <br> Kenny Weiss (LLNL) <br> <em>Multimaterial numerical simulations often need to embed their constituent materials into a computational mesh. For example, the Volume-of-Fluid approach utilizes material volume fractions encoding the percentage of each material within the mesh elements. In this work, we present a novel, accurate method for conservatively shaping materials bounded by curved interfaces into high order meshes. Our algorithm formulates the shaping problem as an L2 projection of the material onto the polynomial bases of each element. We first compute the intersection regions between each high-order mesh element and the material regions. We then use a Green’s theorem approach to produce spectrally-convergent quadrature rules for each of the curved polygons. We present preliminary results which demonstrate that the method is more accurate than a sampling based approach. In collaboration with David Gunderman, John Evans and Jin Yao (LLNL)</em></td>
+<td><strong>Accurate "Shaping" of Curved Interfaces into Curvilinear High Order Meshes</strong> <br> Kenny Weiss (LLNL) <br> <em>Multimaterial numerical simulations often need to embed their constituent materials into a computational mesh. For example, the Volume-of-Fluid approach utilizes material volume fractions encoding the percentage of each material within the mesh elements. In this work, we present a novel, accurate method for conservatively shaping materials bounded by curved interfaces into high order meshes. Our algorithm formulates the shaping problem as an L2 projection of the material onto the polynomial bases of each element. We first compute the intersection regions between each high-order mesh element and the material regions. We then use a Green's theorem approach to produce spectrally-convergent quadrature rules for each of the curved polygons. We present preliminary results which demonstrate that the method is more accurate than a sampling based approach. In collaboration with David Gunderman, John Evans and Jin Yao (LLNL)</em></td>
 </tr>
 <tr>
 <td>10:20-10:40</td>
