Deploying the CEED website with MkDocs

--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -474,7 +474,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>12:00-12:20</td>
 <td>3:00-3:20</td>
-<td><strong>hipBone: A C++ port of Nekbone</strong> <br> Noel Chalmer + Damon McDougall (AMD) <br> <em>As part of CORAL2 benchmarking and optimization efforts, AMD has developed a partial C++ port of the "NekBone" benchmark, named "hipBone", targeting current- and next-generation heterogeneous accelerated computing platforms. We will give a overview of the hipBone benchmark, and present some performance and scaling data collected on ORNL's Spock cluster.</em></td>
+<td><strong>hipBone: A C++ port of Nekbone</strong> <br> Noel Chalmers + Damon McDougall (AMD) <br> <em>As part of CORAL2 benchmarking and optimization efforts, AMD has developed a partial C++ port of the "NekBone" benchmark, named "hipBone", targeting current- and next-generation heterogeneous accelerated computing platforms. We will give a overview of the hipBone benchmark, and present some performance and scaling data collected on ORNL's Spock cluster.</em></td>
 </tr>
 <tr>
 <td>12:20-12:40</td>
@@ -536,7 +536,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>9:40-10:00</td>
 <td>12:40-1:00</td>
-<td><strong>Developments in Support of MFEM's Conforming Mesh Adaptation Capabilities</strong> <br> Cameron Smith + Morteza Siboni (RPI)</td>
+<td><strong>Developments in Support of MFEM's Conforming Mesh Adaptation Capabilities</strong> <br> Cameron Smith + Morteza Hakimi (RPI)</td>
 </tr>
 <tr>
 <td>10:00-10:20</td>
