Deploying the CEED website with MkDocs

--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -479,7 +479,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>12:20-12:40</td>
 <td>3:20-3:40</td>
-<td><strong>Kernel Fusion on GPUs</strong> <br> Will Trojak (TAMU)</td>
+<td><strong>Hyperbolic Diffusion in Flux Reconstruction: Optimisation through Kernel Fusion within Tensor-Product Elements</strong> <br> Will Trojak (TAMU) <br> <em>We will present some of our recent work generating novel methods for the fusion of GPU kernels in the artificial compressibility method (ACM), using tensor-product elements and flux reconstruction. This is made possible through the hyperbolisation of the diffusion terms, which eliminates the algorithmic steps needed to form the viscous stresses. We will show two fusion approaches which offer differing levels of parallelism. This is found to be necessary for the change in workload as the order of accuracy of the elements is increased. Several further optimisations of these approaches will be demonstrated, including a generation-time memory manager for adaptive resource usage. The fused kernels are able to achieve 3-4 times speedup, which compares favourably with a theoretical maximum speedup of 4. In three-dimensional test cases, the generated fused kernels are found to reduce total runtime by 25%, and, when compared to the standard ACM formulation, simulations demonstrate that a speedup of 2.3 times can be achieved.</em></td>
 </tr>
 <tr>
 <td>12:40-1:00</td>
