Deploying the CEED website with MkDocs

--- a/ceed5am/index.html
+++ b/ceed5am/index.html
@@ -419,7 +419,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>8:20-8:40</td>
 <td>11:20-11:40</td>
-<td><strong>Finite Element Thrust &amp; MFEM Update</strong> <br> Veselin Dobrev (LLNL) <em>This talk will provide a summary of the Finite Element thrust activities during the last year of the CEED project with a main focus on new developments in the MFEM software library.</em></td>
+<td><strong>Finite Element Thrust &amp; MFEM Update</strong> <br> Veselin Dobrev (LLNL) <br> <em>This talk will provide a summary of the Finite Element thrust activities during the last year of the CEED project with a main focus on new developments in the MFEM software library.</em></td>
 </tr>
 <tr>
 <td>8:40-9:00</td>
@@ -429,7 +429,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>9:00-9:20</td>
 <td>12:00-12:20</td>
-<td><strong>libParanumal Update</strong> <br> Tim Warburton (VTech) <em>Update on the latest innovations in the libParanumal solvers and improvements for CEED BPS benchmarks.</em></td>
+<td><strong>libParanumal Update</strong> <br> Tim Warburton (VTech) <br> <em>Update on the latest innovations in the libParanumal solvers and improvements for CEED BPS benchmarks.</em></td>
 </tr>
 <tr>
 <td>9:20-9:40</td>
@@ -444,7 +444,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>10:00-10:20</td>
 <td>1:00-1:20</td>
-<td><strong>PETSc GPU Support</strong> <br> Junchao Zhang (ANL) + Mark Adams (LBNL) <em>Introduction to recent progress in PETSc's GPU support and GPU-enabled solvers.</em></td>
+<td><strong>PETSc GPU Support</strong> <br> Junchao Zhang (ANL) + Mark Adams (LBNL) <br> <em>Introduction to recent progress in PETSc's GPU support and GPU-enabled solvers.</em></td>
 </tr>
 <tr>
 <td>10:20-10:40</td>
@@ -561,7 +561,7 @@ Moderators will be unmuted to provide some auditory feedback. They will also mon
 <tr>
 <td>11:20-11:40</td>
 <td>2:20-2:40</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stan Tomov (UTK) <em>This talk provides an update on the activities of the CEED hardware thrust and the MAGMA backaend</em></td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stan Tomov (UTK) <br> <em>This talk provides an update on the activities of the CEED hardware thrust and the MAGMA backaend</em></td>
 </tr>
 <tr>
 <td>11:40-12:00</td>
